bugfix: Bulk VM Actions fails when some VMs are running while others are stopped
